@@ -9,7 +9,7 @@
 # the same distribution terms as the rest of that program.
 #
 # Generated by gnulib-tool.
-# Reproduce by: gnulib-tool --import --dir=. --lib=libgnu --source-base=gnulib --m4-base=gnulib/m4 --doc-base=doc --aux-dir=build-aux --libtool --macro-prefix=gl getopt inttostr localcharset pipe striconv strndup vasprintf
+# Reproduce by: gnulib-tool --import --dir=. --lib=libgnu --source-base=gnulib --m4-base=gnulib/m4 --doc-base=doc --aux-dir=build-aux --libtool --macro-prefix=gl getopt inttostr localcharset pipe striconv strndup strverscmp vasprintf
 
 AUTOMAKE_OPTIONS = 1.5 gnits
 
@@ -609,6 +609,15 @@ EXTRA_DIST += strpbrk.c
 EXTRA_libgnu_la_SOURCES += strpbrk.c
 
 ## end   gnulib module strpbrk
+
+## begin gnulib module strverscmp
+
+
+EXTRA_DIST += strverscmp.c strverscmp.h
+
+EXTRA_libgnu_la_SOURCES += strverscmp.c
+
+## end   gnulib module strverscmp
 
 ## begin gnulib module unistd
 
