@@ -15,11 +15,11 @@
 
 
 # Specification in the form of a command-line invocation:
-#   gnulib-tool --import --dir=. --lib=libgnu --source-base=gnulib --m4-base=gnulib/m4 --doc-base=doc --aux-dir=build-aux --libtool --macro-prefix=gl getopt inttostr localcharset pipe striconv strndup vasprintf
+#   gnulib-tool --import --dir=. --lib=libgnu --source-base=gnulib --m4-base=gnulib/m4 --doc-base=doc --aux-dir=build-aux --libtool --macro-prefix=gl getopt inttostr localcharset pipe striconv strndup strverscmp vasprintf
 
 # Specification in the form of a few gnulib-tool.m4 macro invocations:
 gl_LOCAL_DIR([])
-gl_MODULES([getopt inttostr localcharset pipe striconv strndup vasprintf])
+gl_MODULES([getopt inttostr localcharset pipe striconv strndup strverscmp vasprintf])
 gl_AVOID([])
 gl_SOURCE_BASE([gnulib])
 gl_M4_BASE([gnulib/m4])
