@@ -2,6 +2,7 @@ Version 0.2.2:
 - Bug fixes.
 - Cvtool: The 'channel' command was split into the two new commands
   'channelextract' and 'channelcombine'.
+- CVL: New cvl_check_version() function.
 
 Version 0.2.1:
 - Bug fixes.
